force-app/main/default/objects/CB_Sub_Import__c/CB_Sub_Import__c.object-meta.xml
<CustomObject>
    <label>CB Sub Import</label>
    <nameField>
        <label>CB Sub Import Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Sub Import</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>