force-app/main/default/objects/CB_Sub_Import__c/fields/Asset_Created__c.field-meta.xml
<CustomField>
    <fullName>Asset_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Asset Created</label>
    <type>Checkbox</type>
</CustomField>