force-app/main/default/objects/CB_Sub_Import__c/fields/CB_Price__c.field-meta.xml
<CustomField>
    <fullName>CB_Price__c</fullName>
    <label>CB Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>