force-app/main/default/objects/CB_Sub_Import__c/fields/CB_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>CB_Product_Code__c</fullName>
    <label>CB Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>