force-app/main/default/objects/CB_Sub_Import__c/fields/CB_Sub_Id__c.field-meta.xml
<CustomField>
    <fullName>CB_Sub_Id__c</fullName>
    <label>CB Sub Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>